tweets/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx
  name: tweets-service
  namespace: tweets
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  - name: sync
    port: 90
    protocol: TCP
    targetPort: 90
  selector:
    app: tweets
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
