tweets/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: tweets
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: changesite
spec:
  redirectRegex:
    regex: "^https?://ai\\.sachiniyer\\.com(/.*)?"
    replacement: "https://tweets.sachiniyer.com$1"
    permanent: true
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: tweets-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: tweets-redirect@kubernetescrd
    traefik.ingress.kubernetes.io/router.middlewares: tweets-changesite@kubernetescrd
spec:
  tls:
  - secretName: tweets-cert
  rules:
  - host: ai.sachiniyer.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tweets-service
            port:
              number: 80
      - path: /sync
        pathType: Prefix
        backend:
          service:
            name: tweets-service
            port:
              number: 90
  - host: tweets.sachiniyer.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tweets-service
            port:
              number: 80
      - path: /sync
        pathType: Prefix
        backend:
          service:
            name: tweets-service
            port:
              number: 90
