tweets/sync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tweets-deployment
  labels:
    app: tweets
spec:
  selector:
    matchLabels:
      app: tweets
  template:
    metadata:
      labels:
        app: tweets
    spec:
      containers:
        - name: git-sync
          image: openweb/git-sync
          volumeMounts:
            - name: nginx
              mountPath: /git
        - name: tweets-nginx
          image: nginx
          ports:
            - name: web
              containerPort: 80
          volumeMounts:
            - name: nginx
              mountPath: "/usr/share/nginx/html"
            - name: conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx-docs.conf
      volumes:
        - name: nginx
          emptyDir: {}
        - name: conf
          configMap:
            name: tweets-website
---
apiVersion: v1
kind: Service
metadata:
  name: tweets-service
  labels:
    run: nginx
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
  selector:
    app: tweets
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: tweets
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: changesite
spec:
  redirectRegex:
    regex: "^https?://ai\\.sachiniyer\\.com(/.*)?"
    replacement: "https://tweets.sachiniyer.com$1"
    permanent: true
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: tweets-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: tweets-redirect@kubernetescrd
    traefik.ingress.kubernetes.io/router.middlewares: tweets-changesite@kubernetescrd
spec:
  tls:
  - secretName: tweets-cert
  rules:
  - host: ai.sachiniyer.com
    http:
      paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: tweets-service
             port:
               number: 80
  - host: tweets.sachiniyer.com
    http:
      paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: tweets-service
             port:
               number: 80
